--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
