--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -20,6 +21,7 @@
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.5.4",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
